# Dropbear

./: .gitattributes  LICENSE  README.md
Sim/Gazebo/dropbear_detailed_urdf/src/dropbear_detailed_urdf/: CMakeLists.txt
Sim/Gazebo/dropbear_simplified_urdf/: CMakeLists.txt  package.xml
Sim/Gazebo/dropbear_simplified_urdf/config/: controllers_config.yaml
Sim/Gazebo/dropbear_simplified_urdf/launch/: dropbear_controllers.launch.py  dropbear_gazebo.launch.py
Sim/Gazebo/dropbear_simplified_urdf/meshes/head/: 10mm-ujoint-base__1__1.stl  10mm-ujoint-base__3__1.stl  dum2_1.stl  dum4_1.stl  dum4__1__1.stl  leadscrew__3___1__1.stl  screw-reciever__2__1.stl  u-joint-center__1__1.stl  u-joint-center__4__1.stl
Sim/Gazebo/dropbear_simplified_urdf/meshes/leftarm/: RMD-X8-Pro_MIR8_MIR1__3__1.stl  bicep-motor-mate_1.stl
Sim/Gazebo/dropbear_simplified_urdf/meshes/leftleg/: 290mm-tie-rod_v1_1.stl  RMD-X10-S2_MIR4Rotor_1.stl  double-bracket_1.stl
Sim/Gazebo/dropbear_simplified_urdf/meshes/rightarm/: shoulder-ex-al-interface_1.stl
Sim/Gazebo/dropbear_simplified_urdf/meshes/rightleg/: RMD-X10-S2_MIR4Rotor_1.stl
Sim/Gazebo/dropbear_simplified_urdf/meshes/torso/: HumanoidBatteryAssembly_Copy_v2_1.stl  base_link.stl
Sim/Gazebo/dropbear_simplified_urdf/urdf/: materials.xacro
Sim/Gazebo/dropbear_simplified_urdf/urdf/gazebo/: arm.xacro  dropbear_simplified.sdf  (+5 more)
Sim/RViz/dropbear_urdf/: CMakeLists.txt  Readme.md  package.xml
Sim/RViz/dropbear_urdf/install/: local_setup.sh  setup.sh
Sim/RViz/dropbear_urdf/rviz/: dropbear_rviz.rviz
Sim/RViz/dropbear_urdf/urdf/: arm.xacro  arm_mirror.xacro  dropbear.urdf.xacro  leg.xacro  waist.xacro
(+6271 files in other folders)
